LDEV-4054 updating English and Greek

--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = scratchie
 #language code: el 
 #locale code: GR 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 04:15:53 CST 2016 
  
 #=================== labels for Scratchie =================# 
 
@@ -23,11 +23,6 @@ label.authoring.basic.item.correct  =\u03a3\u03c9\u03c3\u03c4\u03cc;
 label.authoring.basic.add.another.scratchie  =\u03a0\u03c1\u03bf\u03c3\u03b8\u03ad\u03c3\u03c4\u03b5 \u03ac\u03bb\u03bb\u03b7 \u03bc\u03af\u03b1 \u03c0\u03b9\u03b8\u03b1\u03bd\u03ae \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7
 label.authoring.save.button  =\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7
 label.authoring.cancel.button  =\u0391\u03ba\u03cd\u03c1\u03c9\u03c3\u03b7
-error.msg.upload.file.not.found  =\u0394\u03b5\u03bd \u03bc\u03c0\u03cc\u03c1\u03b5\u03c3\u03b1 \u03bd\u03b1 \u03b2\u03c1\u03c9 \u03c4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf {0} \u03b3\u03b9\u03b1 \u03b1\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae.
-error.msg.file.not.found  =\u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b4\u03b5\u03bd \u03b2\u03c1\u03ad\u03b8\u03b7\u03ba\u03b5 \u03b5\u03bc\u03c6\u03b1\u03bd\u03af\u03b6\u03b5\u03c4\u03b1\u03b9 \u03b5\u03be\u03b1\u03af\u03c1\u03b5\u03c3\u03b7 \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7\u03bd \u03b1\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae \u03c4\u03bf\u03c5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5.
-error.msg.io.exception  =\u039c\u03b9\u03b1 \u03b5\u03be\u03b1\u03af\u03c1\u03b5\u03c3\u03b7 \u0395\u03b9\u03c3\u03cc\u03b4\u03bf\u03c5/\u0395\u03be\u03cc\u03b4\u03bf\u03c5 \u03b5\u03bc\u03c6\u03b1\u03bd\u03af\u03b6\u03b5\u03c4\u03b1\u03b9 \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7\u03bd \u03b1\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae \u03c4\u03bf\u03c5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5.
-error.msg.invaid.param.upload  =\u039c\u03b9\u03b1 \u03b5\u03be\u03b1\u03af\u03c1\u03b5\u03c3\u03b7 \u03bb\u03cc\u03b3\u03c9 \u03b1\u03ba\u03b1\u03c4\u03ac\u03bb\u03bb\u03b7\u03bb\u03b7\u03c2 \u03c0\u03b1\u03c1\u03b1\u03bc\u03ad\u03c4\u03c1\u03bf\u03c5 (InvalidParameterException) \u03c3\u03c5\u03bd\u03ad\u03b2\u03b7 \u03b5\u03bd\u03ce \u03c0\u03c1\u03bf\u03c3\u03c0\u03b1\u03b8\u03b5\u03af \u03bd\u03b1 \u03c6\u03bf\u03c1\u03c4\u03ce\u03c3\u03b5\u03b9 \u03c4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf.
-error.msg.repository  =\u0388\u03bd\u03b1 \u03b1\u03c0\u03bf\u03b8\u03b5\u03c4\u03ae\u03c1\u03b9\u03bf \u03c3\u03c6\u03ac\u03bb\u03bc\u03b1 \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7\u03bd \u03c0\u03c1\u03bf\u03c3\u03c0\u03ac\u03b8\u03b5\u03b9\u03b1 \u03bd\u03b1 \u03c6\u03bf\u03c1\u03c4\u03ce\u03c3\u03b5\u03c4\u03b5 \u03c4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf.
 error.msg.default.content.not.find  =\u0394\u03b5\u03bd \u03ae\u03c4\u03b1\u03bd \u03b4\u03c5\u03bd\u03b1\u03c4\u03ae \u03b7 \u03b1\u03bd\u03ac\u03ba\u03c4\u03b7\u03c3\u03b7 \u03c4\u03bf\u03c5 \u03c0\u03c1\u03bf\u03b5\u03c0\u03b9\u03bb\u03b5\u03b3\u03bc\u03ad\u03bd\u03bf\u03c5 \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5 \u03b3\u03b9\u03b1 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03b5\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf.
 authoring.msg.cancel.save  =\u0398\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03ba\u03bb\u03b5\u03af\u03c3\u03b5\u03c4\u03b5 \u03c4\u03bf \u03c0\u03b1\u03c1\u03ac\u03b8\u03c5\u03c1\u03bf \u03c7\u03c9\u03c1\u03af\u03c2 \u03b1\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7;
 label.learning.title  =\u039c\u03ac\u03b8\u03b7\u03c3\u03b7 \u03bc\u03ad\u03c3\u03c9 \u0395\u03c1\u03c9\u03c4\u03b7\u03bc\u03b1\u03c4\u03bf\u03bb\u03bf\u03b3\u03af\u03bf\u03c5
@@ -52,7 +47,6 @@ label.continue  =\u03a3\u03c5\u03bd\u03ad\u03c7\u03b5\u03b9\u03b1
 page.title.monitoring.view.reflection  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u03ba\u03b1\u03c4\u03b1\u03c7\u03c9\u03c1\u03ae\u03c3\u03b5\u03c9\u03bd \u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf\u03c5
 button.close  =\u039a\u03bb\u03b5\u03af\u03c3\u03b9\u03bc\u03bf
 message.no.reflection.available  =\u0394\u03b5\u03bd \u03c5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03b4\u03b9\u03b1\u03b8\u03ad\u03c3\u03b9\u03bc\u03bf \u03c3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf
-message.alertContentEdit  =\u03a3\u03b7\u03bc\u03b5\u03af\u03c9\u03c3\u03b7: \u0388\u03bd\u03b1\u03c2 \u03ae \u03c0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03bf\u03b9 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03b9 \u03ad\u03c7\u03bf\u03c5\u03bd \u03c0\u03c1\u03cc\u03c3\u03b2\u03b1\u03c3\u03b7 \u03c3\u03b5 \u03b1\u03c5\u03c4\u03ae \u03c4\u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03ba\u03b1\u03b9 \u03b3\u03b9\u03b1 \u03b1\u03c5\u03c4\u03cc \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03c0\u03bb\u03ad\u03bf\u03bd \u03bd\u03b1 \u03c4\u03c1\u03bf\u03c0\u03bf\u03c0\u03bf\u03b9\u03b7\u03b8\u03b5\u03af.
 label.on  =\u0386\u03bd\u03bf\u03b9\u03b3\u03bc\u03b1
 label.off  =\u039a\u03bb\u03b5\u03af\u03c3\u03b9\u03bc\u03bf
 monitor.summary.th.advancedSettings  =\u03a0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03b5\u03c2 \u03a1\u03c5\u03b8\u03bc\u03af\u03c3\u03b5\u03b9\u03c2
@@ -188,6 +182,8 @@ admin.preset.marks  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u0392\u03b1\u03
 error.required.fields.missing  =\u039f\u03b9 \u0392\u03b1\u03b8\u03bc\u03bf\u03af \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b5\u03bd\u03bf\u03af. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce, \u03c0\u03bb\u03b7\u03ba\u03c4\u03c1\u03bf\u03bb\u03bf\u03b3\u03ae\u03c3\u03c4\u03b5 \u03c4\u03bf\u03c5\u03c2 \u03bc\u03b5 \u03bc\u03bf\u03c1\u03c6\u03ae \u03b4\u03b9\u03b1\u03c7\u03c9\u03c1\u03b9\u03c3\u03bc\u03ad\u03bd\u03c9\u03bd \u03c4\u03b9\u03bc\u03ce\u03bd \u03bc\u03b5 \u03ba\u03cc\u03bc\u03bc\u03b1.
 error.entered.marks.not.comma.separates  =\u0397 \u03b5\u03b9\u03c3\u03b1\u03b3\u03c9\u03b3\u03ae \u03c4\u03c9\u03bd \u03b2\u03b1\u03b8\u03bc\u03ce\u03bd \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03c3\u03c4\u03b7 \u03c3\u03c9\u03c3\u03c4\u03ae \u03bc\u03bf\u03c1\u03c6\u03ae (\u03c4\u03b9\u03bc\u03ad\u03c2 \u03b4\u03b9\u03b1\u03c7\u03c9\u03c1\u03b9\u03c3\u03bc\u03ad\u03bd\u03b5\u03c2 \u03bc\u03b5 \u03ba\u03cc\u03bc\u03bc\u03b1).
 label.authoring.export.qti  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae IMS QTI
+label.scratchie.options  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7\u03c2
+label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 
 
-#======= End labels: Exported 182 labels for el GR =====
+#======= End labels: Exported 178 labels for el GR =====
