--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_en_AU.properties
@@ -1,6 +1,9 @@
 appName = scratchie 
 #language code: en 
 #locale code: AU 
+
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 04:15:55 CST 2016 
+ 
 #=================== labels for Scratchie =================# 
 
 activity.title  =Scratchie
@@ -20,20 +23,15 @@ label.authoring.basic.item.correct  =Correct?
 label.authoring.basic.add.another.scratchie  =Add another scratchie
 label.authoring.save.button  =Save
 label.authoring.cancel.button  =Cancel
-error.msg.upload.file.not.found  =Could not find upload file {0}.
-error.msg.file.not.found  =File not found exception occurs when uploading file.
-error.msg.io.exception  =IOException occurs when uploading file.
-error.msg.invaid.param.upload  =InvalidParameterException occured while trying to upload File.
-error.msg.repository  =A repository error occurred while trying to upload the file.
 error.msg.default.content.not.find  =Could not retrieve default content record for this tool.
 authoring.msg.cancel.save  =Do you want to close this window without saving?
-label.learning.title  =Scratchie Learning
+label.learning.title  =Scratchie
 monitoring.tab.summary  =Summary
 monitoring.tab.statistics  =Statistic
-monitoring.tab.edit.activity  =Edit Activity
+monitoring.tab.edit.activity  =Edit activity
 monitoring.label.group  =Group
 label.monitoring.edit.activity.edit  =Edit
-message.monitoring.edit.activity.not.editable  =This Activity is no longer editable
+message.monitoring.edit.activity.not.editable  =This activity is no longer editable
 export.title  =Export portfolio for Scratchie
 label.edit  =Edit
 label.finished  =Next activity
@@ -42,14 +40,13 @@ label.finish  =Finished
 message.monitoring.summary.no.session  =No session available
 define.later.message  =Please wait for the instructor to complete the contents of this activity.
 button.try.again  =Try again
-label.up  =Move Up
-label.down  =Move down
+label.up  =Up
+label.down  =Down
 label.authoring.advanced.reflectOnActivity  =Add Notebook at end with the following instructions:
 label.continue  =Continue
-page.title.monitoring.view.reflection  =View Notebook entries
+page.title.monitoring.view.reflection  =View notebook entries
 button.close  =Close
 message.no.reflection.available  =No notebook available
-message.alertContentEdit  =Note: One or more learners have accessed this activity and it cannot longer be modified.
 label.on  =On
 label.off  =Off
 monitor.summary.th.advancedSettings  =Advanced settings
@@ -78,15 +75,15 @@ label.monitoring.item.summary.group  =Group:
 output.desc.learner.mark  =Total mark scored by learner
 warning.msg.authoring.do.you.want.to.delete  =Do you really want to delete this question?
 warning.msg.are.you.sure.you.want.to.finish  =Are you sure you want to finish?
-label.authoring.add.blank.answer  =Add Blank Answer
+label.authoring.add.blank.answer  =Add another answer
 label.authoring.title.required  =Title is required.
 label.authoring.error.possible.answer  =You should provide at least one possible answer.
 label.authoring.error.correct.answer  =You should mark one of the filled answers as correct.
 error.form.validation.error  =You have 1 error in a form. It has been highlighted
 error.form.validation.errors  =You have {0} errors in a form. They have been highlighted
 label.edit.question  =Add/Edit question
-label.authoring.basic.question.name  =Question title
-label.authoring.basic.question.text  =Question description
+label.authoring.basic.question.name  =Title
+label.authoring.basic.question.text  =Question
 label.authoring.advanced.give.extra.point  =Give an extra mark if the first scratchie attempt is the correct one.
 label.authoring.scratchie.answers  =Scratchie answers
 label.one.or.more.questions.not.completed  =One or more questions have not being completed. If you are to continue, you won't be able to answer these questions at a later stage and you'll get zero point for this questions. Are you sure you want to continue?
@@ -109,7 +106,7 @@ label.group  =Group
 label.question.reports  =Question reports
 label.question.semicolon  =Question:{0}
 label.all.teams.summary  =All teams summary
-label.breakdown.by.team  =Breakdown by Team
+label.breakdown.by.team  =Breakdown by team
 label.breakdown.by.student.with.timing  =Breakdown by learner with timing
 label.team.leader  =Team leader:
 label.for.immediate.analysis  =For immediate analysis
@@ -154,14 +151,14 @@ label.authoring.import.qti  =Import IMS QTI
 label.waiting.for.leader  =Please, wait while somebody will become a group leader.
 label.users.from.group  =Other learners participating in current group:
 label.total  =Total
-label.report.by.team.tra  =Report by Team
+label.report.by.team.tra  =Report by team
 label.table.below.shows.which.answer.teams.selected.first.try  =The table below shows which answer the teams selected on the first try
 label.denotes.correct.answer  =*- Denotes the correct answer
 label.legend  =Legend
 label.median  =Median
 label.avg.mean  =Ave. Mean
 label.score  =Score:
-label.you.ve.got  =You''ve got {0}
+label.you.ve.got  =Your score: {0}
 label.your.answer  =Your answer:
 label.other.groups  =Other groups:
 label.all  =All
@@ -185,20 +182,8 @@ admin.preset.marks  =Marks in a form of a comma-separated values
 error.required.fields.missing  =Marks should not be left blank. Please, enter it in a format of comma separated values.
 error.entered.marks.not.comma.separates  =Entered marks are not in a correct format of comma separated values.
 label.authoring.export.qti  =Export IMS QTI
+label.scratchie.options  =Question options
+label.activity.completion  =End of activity
 
-label.authoring.advanced.burning.questions  =Option for burning questions
-label.continue.burning.questions  =Continue with burning questions
-label.burning.questions  =Burning questions
-label.burning.question  =Burning question
-label.general.burning.question  =General burning question
 
-label.count  =Count
-label.like  =Like
-label.unlike  =Unlike
-label.time.limit  =Time limit(minutes)
-label.countdown.time.left  =Time left
-label.time.is.over  =Time is over. Processing your answers...
-label.are.you.ready  =You are going to participate in activity that has time limitation. Are you ready to start?
-label.ok  =OK
-
-#======= End labels: Exported 182 labels for en AU =====
+#======= End labels: Exported 178 labels for en AU =====
