--- a/lams_tool_nb/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_nb/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,32 +2,30 @@ appName = noticeboard
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 04:36:01 CST 2016 
  
 #=================== labels for Noticeboard =================# 
 
 activity.title  =Noticeboard
-activity.description  =Tool for displaying HTML content including external sources such as images and other media.
+activity.description  =Tool for displaying content including external sources such as images and other media.
 activity.helptext  =Displays formatted text and links to external sources on a read only page.
-tool.display.name  =Noticeboard Tool
+tool.display.name  =Noticeboard tool
 tool.description  =Tool that displays a noticeboard
 label.authoring.heading.basic  =Basic
 label.authoring.heading.advanced  =Advanced
 basic.title  =Title:
 basic.content  =Content:
-instructions.type.online  =Online
-instructions.type.offline  =Offline
 label.filename  =Filename
 label.type  =Type
 link.view  =View
-message.defineLaterSet  =Please wait for the instructor to complete the contents of this activity.
+message.defineLaterSet  =Please wait for the instructor to complete the content.
 button.edit  =Edit
 titleHeading.summary  =Summary
 titleHeading.statistics  =Statistics
-titleHeading.editActivity  =Edit Activity
+titleHeading.editActivity  =Edit activity
 heading.group  =Group {0}:
-heading.totalLearners  =Total Number of Learners:
-heading.totalLearnersInGroup  =Number of Learners in Group:
+heading.totalLearners  =Total learners:
+heading.totalLearnersInGroup  =Learners in group:
 message.contentInUseSet  =Modification of content is not allowed since one or more learners has attempted the activity.
 button.cancel  =Cancel
 button.ok  =OK
@@ -37,17 +35,15 @@ button.finish  =Next Activity
 button.next  =Next
 error.mandatoryField  ={0} field is mandatory.
 error.missingParam  =Unable to continue. {0} is missing.
-error.exceedMaxFileSize  =File size exceeded
 error.exception.NbApplication  =An internal error has occured with the Noticeboard Tool. If reporting this error, please report: <br/> <b>{0}</b>
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 button.try.again  =Try again
 advanced.reflectOnActivity  =Add a notebook at end of Noticeboard with the following instructions:
 button.continue  =Continue
-titleHeading.reflections  =Notebook Entries
-titleHeading.reflection  =Notebook Entry
+titleHeading.reflections  =Notebook entries
+titleHeading.reflection  =Notebook entry
 message.no.reflections  =No notebook entries have yet been made.
-message.no.reflection  =No Notebook Entry has yet been made.
-message.no.reflection.available =No notebook entry was added.
+message.no.reflection  =No entry has yet been made.
 errors.maxfilesize  =The uploaded file has exceeded the maximum file size limit of {0} bytes.
 message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
 label.on  =On
@@ -57,10 +53,13 @@ monitor.summary.td.addNotebook  =Add a notebook at the end of Noticeboard
 monitor.summary.td.notebookInstructions  =Notebook instructions
 label.authoring.heading  =Noticeboard Authoring
 button.submit  =Finish
-advanced.allow.comments=Allow learner comments
-label.view.comments=View Comments
-advanced.comments.like.only=Like Button Only
-advanced.comments.like.and.dislike=Like and Dislike Buttons
+message.no.reflection.available  =No notebook entry has been added.
+advanced.allow.comments  =Allow learner comments
+label.view.comments  =View comments
+advanced.comments.like.only  =Like option only
+advanced.comments.like.and.dislike  =Like and dislike options
+advanced.comment.header  =Comments options
+label.activity.completion  =End of activity
 
 
-#======= End labels: Exported 50 labels for en AU =====
+#======= End labels: Exported 54 labels for en AU =====
