--- a/lams_tool_nb/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_nb/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = noticeboard
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 04:36:03 CST 2016 
  
 #=================== labels for Noticeboard =================# 
 
@@ -13,27 +13,14 @@ tool.display.name  =Herramienta Cartelera
 tool.description  =Herramienta que permite mostrar una Cartelera
 label.authoring.heading.basic  =B\u00e1sico
 label.authoring.heading.advanced  =Avanzado
-label.authoring.heading.instructions  =Instrucciones
-button.upload  =A\u00f1adir
 basic.title  =T\u00edtulo
 basic.content  =Contenido
-instructions.onlineInstructions  =Instrucciones Online
-instructions.offlineInstructions  =Instrucciones Offline
-instructions.uploadOnlineInstr  =Archivo con Instrucciones Online
-instructions.uploadOfflineInstr  =Archivo con Instrucciones Offline
-instructions.type.online  =Online
-instructions.type.offline  =Offline
 label.filename  =Nombre de Archivo
 label.type  =Tipo
-label.attachments  =Archivos Adjuntos
 link.view  =Ver
-link.download  =Descargar
-link.delete  =Borrar
 message.defineLaterSet  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
-message.runOfflineSet  =Esta actividad ha sido se\u00f1alada para realizarse en forma offline. Por favor, consulte con su profesor.
 button.edit  =Editar
 titleHeading.summary  =Sumario
-titleHeading.instructions  =Instrucciones
 titleHeading.statistics  =Estad\u00edsticas
 titleHeading.editActivity  =Editar Actividad
 heading.group  =Groupo {0}
@@ -48,9 +35,7 @@ button.finish  =Finalizar
 button.next  =Siguiente
 error.mandatoryField  ={0} campo no puede omitirse
 error.missingParam  =No puede continuar: {0} no se ha encontrado
-error.exceedMaxFileSize  =El archivo es m\u00e1s grande de lo permitido
 error.exception.NbApplication  =Ha ocurrido un error interno en la Cartelera. Por favor reporte el siguiente problema: {0}
-error.contentrepository  =Ha ocurrido un error gravando o borrando el siguiente archivo: {0}.
 authoring.msg.cancel.save  =Esta seguro que desea cancelar? Sus cambios no seran guardados
 button.try.again  =Refrescar
 advanced.reflectOnActivity  =A\u00f1adir anotaci\u00f3n al final de esta actividad con las siguientes instrucciones:
@@ -68,6 +53,13 @@ monitor.summary.td.addNotebook  =Agregar anotador al finalizar Cartelera
 monitor.summary.td.notebookInstructions  =Instrucciones del anotador
 label.authoring.heading  =Cartelera Edici\u00f3n
 button.submit  =Finalizar
+message.no.reflection.available  =No hay reflexi\u00f3n disponible.
+advanced.allow.comments  =Habilitar comentarios
+label.view.comments  =Ver comentarios
+advanced.comments.like.only  =Con bot\u00f3n de 'Me gusta'
+advanced.comments.like.and.dislike  =Con botones de 'Me gusta' y 'No me gusta'
+advanced.comment.header  =Opciones
+label.activity.completion  =Al finalizar actividad
 
 
-#======= End labels: Exported 62 labels for es ES =====
+#======= End labels: Exported 54 labels for es ES =====
