LDEV-4054 updating English and Spanish

--- a/lams_tool_laqa/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = qa
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 05:05:09 CST 2016 
  
 #=================== labels for Q&A =================# 
 
@@ -22,46 +22,30 @@ label.authoring.instructions  =Instrucciones
 label.summary  =Sumario
 label.editActivity  =Editar Actividad
 label.stats  =Estad\u00edsticas
-label.authoring.qa.basic  =Formule las preguntas
 label.advanced.definitions  =Funciones avanzadas
-radiobox.synchInMonitor  =Sincronizar en Seguimiento
 radiobox.usernameVisible  =Permitir ver el nombre de los estudiantes junto a su respuesta
 radiobox.questionsSequenced  =Una pregunta por p\u00e1gina
-label.report.title  =T\u00edtulo del Reporte
 label.monitoringReport.title  =T\u00edtulo del Reporte de Seguimiento
-label.offlineInstructions  =Instrucciones Offline
-label.onlineInstructions  =Instrucciones Offlinec
-label.exportPortfolio.simple  =Exportar Portfolio
-label.exportPortfolio  =Preguntas y Respuestas Exportar Portfolio
-instructions.type.online  =Online
-instructions.type.offline  =Offline
 link.view  =Ver
 link.download  =Descargar
 link.delete  =Borrar
 button.basic  =B\u00e1sico
-button.uploadFile  =Subir Paquete
 button.preview  =Inspecci\u00f3n Previa
 button.advanced  =Avanzado
-button.instructions  =Instrucciones
 button.done  =Listo
 tool.icon.name  =Preguntas y Respuesas
 button.submitAllContent  =Enviar
 button.getNextQuestion  =Siguiente
 button.getPreviousQuestion  =Anterior
 label.question1  =Primera Pregunta
-radiobox.defineLater  =Definir Luego
 radiobox.showFeedback  =Mostrar feedback
 label.upload  =Subir
-label.uploadedOfflineFiles  =Subir archivos offline
-label.uploadedOnlineFiles  =Subir archivos online
 label.type  =Tipo
 label.view  =Ver
 label.delete  =Borrar
 feedback  =Feedback
-error.defaultquestion.empty  =La primer pregunta no puede omitirse
 submit.successful  =El contenido de la actividad se ha creado!
 submit.unSuccessful  =Advertencia: ha ocurrido un error al tratar de guardar el contenido
-error.content.inUse  =El contenido no se puede cambiar ya que al menos un estudiante ha realizado esta actividad.
 label.learning.qa  =Respuestas
 label.question  =Pregunta
 label.answers  =Respuestas:
@@ -69,13 +53,11 @@ label.answer  =Respuesta:
 button.endLearning  =Finalizar
 label.learning.user  =Estudiante
 label.learning.attemptTime  =Fecha/Hora
-label.learning.timezone  =Huso Horario
 label.learning.response  =Respuesta
 label.learning.report  =Reporte de Estudiantes
 label.learning.viewOnly  =Reporte de Respuest Previas
 label.learner.progress  =Reporte de Progreso de Estudiantes
 label.preview  =Inspecci\u00f3n previa de Estudiantes
-label.openEditor  =Usar Editor HTML
 label.user  =Estudiante
 label.question.col  =Pregunta
 label.response  =Respuesta
@@ -95,27 +77,13 @@ label.stats.totalLearners  =N\u00famero Total de Estudiantes:
 label.stats.allGroups  =Todos los Grupos:
 label.stats.totalAllGroups  =N\u00famero Total de Todos los Estudiantes:
 error.defineLater  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
-error.authoringUser.notAvailable  =Error: No se puede continuar. La actividad espera un n\u00famero de usuario.
 error.noLearnerActivity  =El Reporte no esta disponible ya que no hay estudiantes
-error.questions.duplicate  =Las preguntas tienen que ser \u00fanicas.
 count.total.user  =N\u00famero total de estudiantes:
 count.finished.user  =N\u00famero total de estudiantes que ha terminado esta actividad:
-label.topMark  =Evaluaci\u00f3n m\u00e1xima:
-label.avMark  =Media de Evaluaci\u00f3n:
-label.loMark  =Evaluaci\u00f3n m\u00ednima:
-count.max.attempt  =M\u00e1ximo n\u00famero de intentos:
-error.monitorReportTitle  =El campo "T\u00edtulo del Reporte de Seguimiento" no se puede omitir
-error.noStudentActivity  =El reporte no se ha podido generar. Ning\u00fan estudiante ha intentado esta actividad
-error.tab.contentId.required  =Esta p\u00e1guina no esta disponible
-error.contentrepository  =Error: No se puede continuar.
-error.system.qa  =Ha ocurrido un error de sistema. Contacte con soporte t\u00e9cnico. El informe del error es\:{0}
 authoring.msg.cancel.save  =Esta seguro que desea cancelar? Sus cambios no seran guardados
 label.allResponses  =Ver todas las respuestas
 label.learning.forceFinish  =Tiene que terminar esta actividad ahora
 label.learning.yourAnswer  =Su respuesta:
-label.export.learner  =Portfolio Export para Estudiante
-label.export.teacher  =Portfolio Export para Instructor
-label.export  =Portfolio Export
 label.show  =Mostrar
 label.response.hidden  =Escondido
 button.try.again  =Refrescar
@@ -148,8 +116,6 @@ label.tip.deleteQuestion  =Borra pregunta
 label.tip.moveQuestionDown  =Mover hacia abajo
 label.tip.moveQuestionUp  =Mover hacia arriba
 questions.none.submitted  =Por favor, agrege almenos una pregunta
-question.duplicate  =Atenci\u00f3n: preguntas duplicadas.
-question.blank  =Atenci\u00f3n: el texto de las preguntas no puede ser dejado en blanco
 count.finished.session  =Total:
 label.feedback.seq  =N\u00famero de preguntas en esta actividad:
 label.feedback.combined  =N\u00famero de preguntas en esta actividad:
@@ -159,7 +125,6 @@ label.end.questions  =Fin de las preguntas.
 label.lockWhenFinished  =No permitir modificaciones una vez terminado
 label.learner.answer  =Mostrar respuestas de otros estudiantes
 label.show.names  =Mostrar el nombre de los estudiantes con su respuesta
-errors.maxfilesize  =El archivo que intent\u00f3 adjuntar excede el m\u00e1ximo de {0} bytes.
 warning.empty.answers  =Una o mas preguntas no han sido contestadas. \u00bfDesea continuar igualmente?
 label.on  =Si
 label.off  =No
@@ -167,8 +132,6 @@ monitor.summary.th.advancedSettings  =Opciones Avanzadas
 monitor.summary.td.addNotebook  =Agregar anotador al finalizar Preguntas
 monitor.summary.td.notebookInstructions  =Intrucciones del anotador
 label.conditions  =Condiciones
-label.authoring.heading.conditions.desc  =Ingrese condiciones para Preguntas y Respuestas
-label.authoring.heading.conditions  =Condiciones
 label.authoring.conditions.add.condition  =Agregar Condici\u00f3n
 label.authoring.conditions.list.title  =Condiciones
 label.authoring.conditions.order  =Orden
@@ -192,7 +155,6 @@ textsearch.any.words  =contengan una o mas de estas palabras:
 textsearch.excluded.words  =no contenga ninguna de estas palabras:
 textsearch.questions  =Buscar en las siguientes respuestas:
 pageTitle.admin  =Configuraci\u00f3n de preguntas y respuestas
-admin.formError  =Faltan algunos valores, asegurese que todos los campos se han rellenados.
 admin.enableWizard  =Habilitar el asistente de preguntas y respuestas
 admin.success  =La configuraci\u00f3n ha sido salvada
 admin.return  =Volver a la p\u00e1gina de mantenimiento de LAMS
@@ -286,6 +248,13 @@ label.no.reedit.allowed  =No permitir re-edici\u00f3n
 label.search  =Buscar...
 label.posted.by  ={0} el {1}
 label.noredo.enabled  =Atenci\u00f3n: desp\u00faes de contestar las preguntas, no se podr\u00e1n realizar cambios.
+label.select.leader  =Selecci\u00f3n de l\u00edder
+label.question.options  =Opciones
+label.activity.completion  =Al finalizar actividad
+label.notifications  =Notificaciones
+label.words.required  =Palabras requeridas
+label.other.options  =M\u00e1s opciones
+label.allow.review.other.responses  =Habilitar revisi\u00f3n de respuestas
 
 
-#======= End labels: Exported 280 labels for es ES =====
+#======= End labels: Exported 249 labels for es ES =====
