--- a/lams_tool_laqa/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources.properties
@@ -2,14 +2,14 @@ appName = qa
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Nov 13 15:33:29 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 05:05:05 CST 2016 
  
 #=================== labels for Q&A =================# 
 
 activity.title  =Q & A
 activity.description  =Each learner answers question(s) and then sees answers from all learners collated on the next page.
 activity.helptext  =Each learner answers one or more questions in short answer format and then sees answers from all learners collated on the next page.
-tool.display.name  =Questions & Answers Tool
+tool.display.name  =Questions & Answers tool
 tool.description  =Tool for asking one or more short answer questions and displays the results.
 label.tool.shortname  =Q&A
 label.authoring  =Q&A Authoring
@@ -44,16 +44,14 @@ label.type  =Type
 label.view  =View
 label.delete  =Delete
 feedback  =Please address the following issues before submit.
-error.defaultquestion.empty  =The first question can not be empty.
 submit.successful  =The content has been created successfully.
 submit.unSuccessful  =Warning: An error occurred while saving the content. <br>
-error.content.inUse  =Modification of the content is not allowed since one or more learners has attempted the activity.
 label.learning.qa  =Answers for Q&A
 label.question  =Question
 label.answers  =Answers:
 label.answer  =Answer:
 button.endLearning  =Next activity
-label.learning.user  =User
+label.learning.user  =Learner
 label.learning.attemptTime  =Date
 label.learning.response  =Response
 label.learning.report  =Learning report
@@ -75,20 +73,13 @@ label.update  =Update
 label.hide  =Hide
 label.unHide  =Show
 label.hidden  =Hidden
-label.stats.totalLearners  =Total count of learners:
+label.stats.totalLearners  =Total number of learners:
 label.stats.allGroups  =All groups:
-label.stats.totalAllGroups  =Total count of all learners:
+label.stats.totalAllGroups  =Total numer of all learners:
 error.defineLater  =Please wait for the instructor to complete the contents of this activity.
 error.noLearnerActivity  =Summary report is not available since no learners attempted the activity yet.
 count.total.user  =Total users:
 count.finished.user  =Finished users:
-label.topMark  =Top mark:
-label.avMark  =Average mark:
-label.loMark  =Lowest mark:
-count.max.attempt  =Maximum attempt count:
-error.noStudentActivity  =Sorry, the report can not be generated. <br> No learner has attempted the activity yet.
-error.tab.contentId.required  =Sorry, the screen is not available. The Tool Activity requires a content id.
-error.contentrepository  =An error has occurred when saving/deleting instruction file {0}. The files may not be saved correctly.
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 label.allResponses  =View all responses
 label.learning.forceFinish  =You are required to finish this activity now.
@@ -106,11 +97,11 @@ label.tooltip.edit  =Editing this answer
 label.tooltip.tick  =Save changes
 label.continue  =Continue
 label.reflect  =Add a notebook at end of Q&A with the following instructions:
-label.responses.locked  =Note: after completing the activity, changes to your answers are not allowed.
+label.responses.locked  =Note: after completing the activity, you will not be able to make changes to your answers.
 label.notebook.entries  =Notebook entries
 label.reflection  =Notebook entry
 label.learner  =Learner
-label.view.reflection  =View notebook entries
+label.view.reflection  =Notebook entries
 label.close  =Close
 label.other.answers  =Answers from other learners
 label.learners.answers  =Learners' answers
@@ -134,7 +125,6 @@ label.end.questions  =End of the questions.
 label.lockWhenFinished  =Lock when finished
 label.learner.answer  =Show answers from other learners
 label.show.names  =Show names of other learners
-errors.maxfilesize  =The uploaded file has exceeded the maximum file size limit of {0} bytes
 warning.empty.answers  =One or more question(s) are not answered.  Do you want to continue anyway?
 label.on  =On
 label.off  =Off
@@ -164,7 +154,7 @@ textsearch.phrase  =have this exact wording or phrase:
 textsearch.any.words  =have one or more of these words:
 textsearch.excluded.words  =have none of these unwanted words:
 textsearch.questions  =Search in these questions:
-pageTitle.admin  =Q&A Configuration
+pageTitle.admin  =Q&A configuration
 admin.enableWizard  =Enable the Q&A question wizard
 admin.success  =Configuration successfully saved.
 admin.return  =Return to maintain LAMS
@@ -263,7 +253,8 @@ label.question.options  =Questions options
 label.activity.completion  =End of activity
 label.notifications  =Notifications
 label.words.required  =Words required
-label.other.options  =Other settings
+label.other.options  =More settings
 label.allow.review.other.responses  =Allow review other responses?
 
-#======= End labels: Exported 258 labels for en AU =====
+
+#======= End labels: Exported 249 labels for en AU =====
