--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 05:15:22 CST 2016 
  
 #=================== labels for Submit Files =================# 
 
@@ -18,26 +18,13 @@ label.cancel  =Cancelar
 label.authoring.heading  =Enviar Archivos Edici\u00f3n
 label.authoring.heading.basic  =B\u00e1sico
 label.authoring.heading.basic.desc  =Informaci\u00f3n B\u00e1sica
-label.authoring.heading.instructions  =Instrucciones
-label.authoring.heading.instructions.desc  =Ingrese las instrucciones para modos online y offline
 label.authoring.heading.advance  =Avanzado
 label.authoring.heading.advance.desc  =Ingrese las opciones avanzadas
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.basic.instruction  =Instrucciones
-label.authoring.online.instruction  =Instrucciones para Modo Online
-label.authoring.offline.instruction  =Instrucciones para Modo Offline
-label.authoring.online.file  =A\u00f1adir Archivo Online
-label.authoring.offline.file  =A\u00f1adir Archivo Offline
 label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminado
 label.authoring.save.button  =Guardar
 label.authoring.cancel.button  =Cancelar
-label.authoring.choosefile.button  =Seleccionar Archivo
-label.authoring.upload.online.button  =A\u00f1adir Online
-label.authoring.upload.offline.button  =A\u00f1adir Offline
-label.authoring.online.filelist  =Archivos con Instrucciones Online
-label.authoring.offline.filelist  =Archivos con Instrucciones Offline
-label.authoring.online.delete  =Borrar
-label.authoring.offline.delete  =Borrar
 authoring.exception  =Hay un problem con el envio, la razon es {0}
 label.learner.fileName  =Nombre de Archivo
 label.learner.filePath  =Archivo
@@ -57,7 +44,6 @@ label.monitoring.heading  =Seguimiento
 label.monitoring.heading.userlist  =Reporte
 label.monitoring.heading.userlist.desc  =Lista de Estudiantes
 label.monitoring.heading.instructions  =Instrucciones
-label.monitoring.heading.instructions.desc  =Instrucciones para Modos Online y Offline
 label.monitoring.heading.edit.activity  =Editar Actividad
 label.monitoring.heading.edit.activity.desc  =Editar Descripci\u00f3n
 label.monitoring.heading.stats  =Estad\u00edsticas
@@ -86,17 +72,9 @@ submit.upload.twice  =El Archivo que desea enviar ya ha sido enviado, por favor,
 submit.modenotsupported  =El Modo "{0}" requerido no es soportado por esta actividad
 submit.successful  =El Contenido ha sido creado!
 learner.form.filepath.displayname  =Nombre del Archivo a Enviar
-errors.header  =<UL>
-errors.prefix  =<LI>
-errors.suffix  =</LI>
-errors.footer  =</UL>
-errors.required  =Se require {0}
-errors.maxfilesize  =El Archivo enviado ha excedido el m\u00e1ximo de tama\u00f1o especificado: {0} bytes
-error.read.only.mode  =No se puede finalizar. Modo de lectura solamente
 errors.mark.invalid.number  =Le evaluaci\u00f3n no es un n\u00famero valido
 authoring.msg.cancel.save  =Esta seguro que desea cancelar? Sus cambios no seran guardados
 define.later.message  =El contenido para esta actividad no ha sido definido todavia. Por favor espere a que su profesor defina el contenido.
-run.offline.message  =Esta actividad ha sido se\u00f1alada para realizarse en forma offline. Por favor, consulte con su profesor.
 message.monitoring.edit.activity.not.editable  =El contenido de esta actividad no se puede editar nuevamente.
 button.try.again  =Refrescar
 button.finish  =Finalizar
@@ -126,7 +104,6 @@ error.attachment.executable  =El archivo que intenta subir es un executable y no
 message.alertContentEdit  =Advertencia: uno o m\u00e1s estudiantes han accedido esta actividad. Si desea cambiar el contenido, tenga en cuenta que algunos estudiantes recibir\u00e1n informaci\u00f3n diferente.
 message.warnLockOnFinish  =Atenci\u00f3n: una vez finalizada esta actividad no podr\u00e1 hacer cambios.
 message.activityLocked  =El instructor ha configurado esta actividad para que una vez finalizada la mismo, no se pueda continuar a\u00f1adiendo archivos. Como usted ha retornado, no podr\u00e1 agregar nuevos archivos.
-monitoring.instructions.attachments  =Archivos Adjuntos
 monitoring.marked.question  =Calificado
 label.no  =No
 label.yes  =S\u00ed
@@ -160,6 +137,24 @@ monitor.summary.date.restriction.removed  =Restricci\u00f3n de fecha desactivada
 monitoring.user.submittedFiles  =Archivos enviados
 output.desc.submitted.items.output.definition.sbmt  =Archivos enviados
 button.submit  =Finalizar
+label.monitoring.file.delete  =Eliminar
+label.file.options  =Opciones
+label.activity.completion  =Al finalizar actividad
+label.notifications  =Notificaciones
+label.view.files  =Ver archivos
+label.deleted  =Eliminar
+label.monitoring.original.learner.file.delete  =Eliminar
+label.monitoring.original.learner.file.restore  =Recuperar
+message.monitor.confirm.original.learner.file.delete  =\u00bfSeguro que quiere borrar el archivo original {0} cargado por el alumno?
+message.monitor.confirm.original.learner.file.restore  =\u00bfSeguro que desea recuperar el archivo original {0} cargado por el alumno?
+event.file.delete.subject  =LAMS: Archivo borrado
+event.file.delete.body  =Un instructor borr\u00f3 el archivo {0} en una actividad de enviar los archivos en LAMS. Este mensaje se env\u00eda de forma autom\u00e1tica, por favor no responder a la misma.
+event.file.restore.subject  =LAMS: Archivo recuperado
+event.file.restore.body  =Un instructor ha recuperado el archivo {0} en una actividad de enviar los archivos en LAMS. Este mensaje se env\u00eda de forma autom\u00e1tica, por favor no responder a la misma.
+audit.file.delete  =Instructor {0} borr\u00f3 el archivo {1} cargado por alumno {2}
+audit.file.restore  =Instructor {0} recuper\u00f3 el archivo {1} cargado por alumno {2}
+label.search  =Buscar..
+errors.required  ={0} es obligatorio
 
 
-#======= End labels: Exported 154 labels for es ES =====
+#======= End labels: Exported 149 labels for es ES =====
